feat: Implement user registration and authentication, configure Docker Compose with environment variables, and add a CI/CD workflow.